fix: end-align field labels in GCS sheet

--- a/src/styles/gcs-sheet/_base.scss
+++ b/src/styles/gcs-sheet/_base.scss
@@ -163,6 +163,10 @@ body {
     min-width: 0;
     width: 100%;
 
+    label {
+      text-align: end;
+    }
+
     .form-group:nth-child(odd) {
       @include gcs-banding;
     }
